@@ -28,6 +28,8 @@ PHP                                                                        NEWS
 - PHP-FPM SAPI:
   . Implemented FR #54499 (FPM ping and status_path should handle HEAD request). (fat)
   . Implemented FR #54172 (Overriding the pid file location of php-fpm). (fat)
+  . Fixed missing Expires and Cache-Control headers for ping and status pages.
+    (fat)
 
 - SPL extension:
   . Fixed bug #54971 (Wrong result when using iterator_to_array with use_keys
